# aio-stats

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
LICENSES/: MIT.txt
md_notebooks/: Environment_Stats.md
src/aio_stats/: __init__.py  aio_client.py  aio_file.py  collect_stats.py  create_feeds.py  data_reader.py  helpers.py  save_csv_raw.py  stats_maker.py  transform_data_mixin.py
src/aio_stats/data/: location_nav.html  month_nav.html  stat_feeds.toml  stats_plotting.html  year_nav.html
src/aio_stats/plotting/: __init__.py  creators.py  env_runner.py  page_maker.py  plot_raw.py  plot_raw_from_csv.py  process_helpers.py  raw_data.py
