[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "aio_stats"
authors = [
    {name = "Michael Reuter", email = "mareuternh@gmail.com"}
]
description = "Adafruit IO statistics generation."
readme = "README.rst"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "adafruit-io",
    "pandas",
    "pyarrow"
]

[project.optional-dependencies]
plot = [
    "kaleido",
    "jinja2",
    "plotly",
]
dev = [
    "pre-commit"
]

[project.scripts]
collect_stats = "aio_stats.collect_stats:runner"
env_runner = "aio_stats.plotting.env_runner:runner"
page_maker = "aio_stats.plotting.page_maker:runner"
plot_raw = "aio_stats.plotting.plot_raw:runner"
save_csv_raw = "aio_stats.save_csv_raw:runner"

[tool.setuptools_scm]

[tool.ruff]
line-length = 110

[tool.ruff.lint.per-file-ignores]
"src/aio_stats/__init__.py" = [
    "E402",
    "F401",
    "F403"
]
"src/aio_stats/plotting/__init__.py" = [
    "E402",
    "F401",
    "F403"
]
